# FitnessApp

./: README.md
app/: CMakeLists.txt  HSport.pen  MCP-高保真原型自动设计.md  README.md  app独立开发工作流。.md  log.md  todo.md  环境配置文档.md
app/android/: AndroidManifest.xml
app/android/res/values/: strings.xml
app/docs/: android-troubleshooting.md  decisions.md  figma-design.md  hsport-pen-to-figma-migration.md  hsport-pen-ui-logic-map.md  product-requirements.md  setup-design-analysis.md  ui-interaction-logic.md
app/i18n/: hsport_en.ts  hsport_zh_CN.ts
app/qml/: main.qml
app/qml/components/: CardButton.qml  FoodEntryRow.qml  NutrientBar.qml  SetupStepLayout.qml
app/qml/pages/: AddExercisePage.qml  AddFoodPage.qml  BasicInfoPage.qml  DailySummaryPage.qml  DietLogPage.qml  ExerciseLogPage.qml  HomePage.qml  LaunchPage.qml  ModeSelectPage.qml  OnboardingPage.qml  SettingsPage.qml  SetupActivityPage.qml  SetupAgePage.qml  SetupFlowPage.qml  SetupGenderPage.qml  SetupGoalPage.qml  SetupHeightPage.qml  SetupIntroPage.qml  SetupProfilePage.qml  SetupWeightPage.qml
app/qml/pages/diet/: AddFoodPage.qml  DietLogPage.qml
app/qml/pages/exercise/: ExerciseLogPage.qml
app/qml/pages/main/: BasicInfoPage.qml  DailySummaryPage.qml  HomePage.qml  SettingsPage.qml
app/qml/pages/onboarding/: LaunchPage.qml  ModeSelectPage.qml  OnboardingPage.qml
app/qml/pages/setup/: SetupActivityPage.qml  SetupAgePage.qml  SetupFlowPage.qml  SetupGenderPage.qml  SetupGoalPage.qml  SetupHeightPage.qml  SetupIntroPage.qml  SetupProfilePage.qml  SetupWeightPage.qml
app/qml/styles/: StyleConstants.qml
app/resources/images/: README.md
app/resources/images/onboarding/: README.md
app/src/: main.cpp
app/src/core/: NutritionCalculator.cpp  NutritionCalculator.h
app/src/models/: DailyLogEntry.cpp  DailyLogEntry.h  DailyLogModel.cpp  DailyLogModel.h  FoodItem.cpp  FoodItem.h  FoodListModel.cpp  FoodListModel.h
app/src/services/: IPoseCorrectionService.cpp  IPoseCorrectionService.h  PoseCorrectionService.cpp  PoseCorrectionService.h  StorageService.cpp  StorageService.h
